# android_sophia

./: settings.gradle
app/: build.gradle
app/src/androidTest/java/cn/ylbkoo/sophia/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/cn/ylbkoo/sophia/sample/: MainActivity.java
app/src/main/res/layout/: activity_main.xml  content_main.xml
app/src/main/res/menu/: menu_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/cn/ylbkoo/sophia/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
sophia/: build.gradle
sophia/src/androidTest/java/cn/ylbkoo/sophia/: ExampleInstrumentedTest.java
sophia/src/main/: AndroidManifest.xml
sophia/src/main/c/: CMakeLists.txt  SophiaInterface.c
sophia/src/main/c/include/: cn_ylbkoo_sophia_SophiaInterface.h
sophia/src/main/java/cn/ylbkoo/sophia/: SophiaDb.java  SophiaInterface.java
sophia/src/main/res/values/: strings.xml
